# VM_UCL_CRM

./: README.md  pyproject.toml
.github/workflows/: ci.yml
ucl_crm/: hooks.py  modules.txt
ucl_crm/ucl_crm/doctype/pmx_contractor/: pmx_contractor.js  pmx_contractor.json  pmx_contractor.py  test_pmx_contractor.py
ucl_crm/ucl_crm/doctype/pmx_end_customer/: pmx_end_customer.js  pmx_end_customer.json  pmx_end_customer.py  test_pmx_end_customer.py
